Fix overflow issue between the TimeScheduling component and the DefaultBody

--- a/client/src/css/timescheduling.css
+++ b/client/src/css/timescheduling.css
@@ -23,9 +23,10 @@
 
 .container {
   width: 69.063vw;
-  height: 42.675vw;
+  min-height: 42.675vw;
   background: #000000;
   border-radius: 35px;
+  overflow: visible;
 }
 
 .container-text {
